utm cleaner is added

--- a/parser.ipynb
+++ b/parser.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,32 +43,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "datetime.date(2020, 6, 1)"
-      ]
-     },
-     "execution_count": 125,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "date.today()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "headers = requests.utils.default_headers()\n",
     "current_date = date.today()\n",
+    "\n",
     "\n",
     "with open('pages.json') as pages_file:\n",
     "    pages = json.load(pages_file)\n",
@@ -87,7 +68,14 @@
     "                 }\n",
     "              }\n",
     "\n",
-    "    \n",
+    "def utm_cleaner(url):\n",
+    "    '''Delete utm tags from url'''\n",
+    "    index = url.find('?utm')\n",
+    "    if index > 0:\n",
+    "        url = url[:index]\n",
+    "    return url\n",
+    "\n",
+    "   \n",
     "class Event:\n",
     "    def __init__(self, data):\n",
     "        self.data = data\n",
@@ -111,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -178,13 +166,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('events.json', 'w') as events_file:\n",
-    "    json.dump(events, events_file)"
+    "with open('events.json', 'w', encoding='utf8') as events_file:\n",
+    "    json.dump(events, events_file, ensure_ascii=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'http://yandex.ru/promo/events/online/kazakhstan'"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "utm_cleaner(utm_url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
