New pages for parsing are added to pages.json

--- a/parser.ipynb
+++ b/parser.ipynb
@@ -20,7 +20,7 @@
     "        + 'location': div class=\"events-info__location\"\n",
     "        + 'online status'\n",
     "    - Handlers for optional_event_keys\n",
-    "        - 'registration_url': Registration link \n",
+    "        + 'registration_url': Registration link \n",
     "        + 'price'\n",
     "        + 'tags'\n",
     "        + 'language'\n",
