README is updated with new information

--- a/parser.ipynb
+++ b/parser.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +508,7 @@
        "  'themes': [],\n",
        "  'online_status': 'Online',\n",
        "  'reg_url': '',\n",
-       "  'tags': ['Data Science', 'Natural Language Processing']},\n",
+       "  'tags': ['Natural Language Processing', 'Data Science']},\n",
        " 'https://cloud.yandex.ru/events/142': {'group': 'Мероприятия Яндекса',\n",
        "  'title': 'Вебинар. Доступ к ресурсам с помощью IAM',\n",
        "  'date': '2020-06-16',\n",
@@ -563,7 +563,7 @@
        "  'tags': ['Hardware']}}"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -571,13 +571,6 @@
    "source": [
     "events"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
