--- a/parser.ipynb
+++ b/parser.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -37,59 +37,52 @@
      "text": [
       "module 'handlers' has no attribute 'themes'\n",
       "module 'handlers' has no attribute 'description'\n",
-      "module 'handlers' has no attribute 'speakers_companies'\n",
-      "module 'handlers' has no attribute 'reg_url'\n",
       "module 'handlers' has no attribute 'location'\n",
-      "module 'handlers' has no attribute 'speakers'\n",
       "module 'handlers' has no attribute 'organizers'\n",
+      "module 'handlers' has no attribute 'speakers_companies'\n",
+      "module 'handlers' has no attribute 'speakers'\n",
       "module 'handlers' has no attribute 'price'\n",
       "module 'handlers' has no attribute 'themes'\n",
       "module 'handlers' has no attribute 'description'\n",
-      "module 'handlers' has no attribute 'speakers_companies'\n",
-      "module 'handlers' has no attribute 'reg_url'\n",
       "module 'handlers' has no attribute 'location'\n",
-      "module 'handlers' has no attribute 'speakers'\n",
       "module 'handlers' has no attribute 'organizers'\n",
+      "module 'handlers' has no attribute 'speakers_companies'\n",
+      "module 'handlers' has no attribute 'speakers'\n",
       "module 'handlers' has no attribute 'price'\n",
       "module 'handlers' has no attribute 'themes'\n",
       "module 'handlers' has no attribute 'description'\n",
-      "module 'handlers' has no attribute 'speakers_companies'\n",
-      "module 'handlers' has no attribute 'reg_url'\n",
       "module 'handlers' has no attribute 'location'\n",
-      "module 'handlers' has no attribute 'speakers'\n",
       "module 'handlers' has no attribute 'organizers'\n",
+      "module 'handlers' has no attribute 'speakers_companies'\n",
+      "module 'handlers' has no attribute 'speakers'\n",
       "module 'handlers' has no attribute 'price'\n",
       "module 'handlers' has no attribute 'themes'\n",
       "module 'handlers' has no attribute 'description'\n",
-      "module 'handlers' has no attribute 'speakers_companies'\n",
-      "module 'handlers' has no attribute 'reg_url'\n",
       "module 'handlers' has no attribute 'location'\n",
-      "module 'handlers' has no attribute 'speakers'\n",
       "module 'handlers' has no attribute 'organizers'\n",
+      "module 'handlers' has no attribute 'speakers_companies'\n",
+      "module 'handlers' has no attribute 'speakers'\n",
       "module 'handlers' has no attribute 'price'\n",
       "module 'handlers' has no attribute 'themes'\n",
       "module 'handlers' has no attribute 'description'\n",
-      "module 'handlers' has no attribute 'speakers_companies'\n",
-      "module 'handlers' has no attribute 'reg_url'\n",
       "module 'handlers' has no attribute 'location'\n",
-      "module 'handlers' has no attribute 'speakers'\n",
       "module 'handlers' has no attribute 'organizers'\n",
+      "module 'handlers' has no attribute 'speakers_companies'\n",
+      "module 'handlers' has no attribute 'speakers'\n",
       "module 'handlers' has no attribute 'price'\n",
       "module 'handlers' has no attribute 'themes'\n",
       "module 'handlers' has no attribute 'description'\n",
-      "module 'handlers' has no attribute 'speakers_companies'\n",
-      "module 'handlers' has no attribute 'reg_url'\n",
       "module 'handlers' has no attribute 'location'\n",
-      "module 'handlers' has no attribute 'speakers'\n",
       "module 'handlers' has no attribute 'organizers'\n",
+      "module 'handlers' has no attribute 'speakers_companies'\n",
+      "module 'handlers' has no attribute 'speakers'\n",
       "module 'handlers' has no attribute 'price'\n",
       "module 'handlers' has no attribute 'themes'\n",
       "module 'handlers' has no attribute 'description'\n",
-      "module 'handlers' has no attribute 'speakers_companies'\n",
-      "module 'handlers' has no attribute 'reg_url'\n",
       "module 'handlers' has no attribute 'location'\n",
-      "module 'handlers' has no attribute 'speakers'\n",
       "module 'handlers' has no attribute 'organizers'\n",
+      "module 'handlers' has no attribute 'speakers_companies'\n",
+      "module 'handlers' has no attribute 'speakers'\n",
       "module 'handlers' has no attribute 'price'\n"
      ]
     }
@@ -173,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,24 +267,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing ../../matyushkin.github.io/README/index.html from ./README.md.\n",
       "Writing ../../matyushkin.github.io/404/index.html from ./404.html.\n",
       "Writing ../../matyushkin.github.io/index.html from ./index.html.\n",
-      "Writing ../../matyushkin.github.io/donate/index.html from ./donate/index.html.\n",
+      "Writing ../../matyushkin.github.io/README/index.html from ./README.md.\n",
       "Writing ../../matyushkin.github.io/cv/index.html from ./cv/index.html.\n",
-      "Writing ../../matyushkin.github.io/posts/index.html from ./posts/index.html.\n",
-      "Writing ../../matyushkin.github.io/events/index.html from ./events/index.html.\n",
       "Writing ../../matyushkin.github.io/links/index.html from ./links/index.html.\n",
-      "Writing ../../matyushkin.github.io/texts/index.html from ./texts/index.html.\n",
+      "Writing ../../matyushkin.github.io/events/index.html from ./events/index.html.\n",
+      "Writing ../../matyushkin.github.io/donate/index.html from ./donate/index.html.\n",
+      "Writing ../../matyushkin.github.io/posts/index.html from ./posts/index.html.\n",
       "Writing ../../matyushkin.github.io/spb/index.html from ./spb/index.html.\n",
-      "Copied 15 files / Wrote 10 files in 0.19 seconds (19.0ms each, v0.11.0)\n"
+      "Writing ../../matyushkin.github.io/texts/index.html from ./texts/index.html.\n",
+      "Copied 15 files / Wrote 10 files in 0.18 seconds (18.0ms each, v0.11.0)\n"
      ]
     },
     {
@@ -300,7 +293,7 @@
        "True"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,23 +312,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 24a3bc0] Events project files are updated\n",
-      " 2 files changed, 2 insertions(+), 2 deletions(-)\n",
-      "Counting objects: 5, done.\n",
+      "[master da16713] Events project files are updated\n",
+      " 1 file changed, 1 insertion(+), 1 deletion(-)\n",
+      "Counting objects: 4, done.\n",
       "Delta compression using up to 8 threads.\n",
-      "Compressing objects: 100% (4/4), done.\n",
-      "Writing objects: 100% (5/5), 4.89 KiB | 1.22 MiB/s, done.\n",
-      "Total 5 (delta 2), reused 0 (delta 0)\n",
+      "Compressing objects: 100% (3/3), done.\n",
+      "Writing objects: 100% (4/4), 420 bytes | 420.00 KiB/s, done.\n",
+      "Total 4 (delta 2), reused 0 (delta 0)\n",
       "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
       "To github.com:matyushkin/matyushkin.github.io.git\n",
-      "   5d68907..24a3bc0  master -> master\n"
+      "   24a3bc0..da16713  master -> master\n"
      ]
     }
    ],
