Добавлена работа с датами

--- a/parser.ipynb
+++ b/parser.ipynb
@@ -8,6 +8,8 @@
     "Сначала проверяются главные («стартовые») страницы, описанные в файле `pages.json`. Далее найденные на них ссылки на внутренние страницы мероприятий. Результаты записываются в файл `events.json`, который далее используется для генерации карточек мероприятий.\n",
     "\n",
     "# TODO:\n",
+    "- В структуру хэндлеров более логично передавать текущую структуру данных, а не объект, имя - так больше информации для анализа\n",
+    "- Добавить другую хорошо оформленную стартовую страницу\n",
     "- Сделать очеловеченный вариант функции представления даты\n",
     "- Добавить обработку тегов\n",
     "- Вместо set правильный отбор тем\n",
@@ -35,55 +37,55 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "module 'handlers' has no attribute 'themes'\n",
-      "module 'handlers' has no attribute 'description'\n",
-      "module 'handlers' has no attribute 'location'\n",
-      "module 'handlers' has no attribute 'organizers'\n",
       "module 'handlers' has no attribute 'speakers_companies'\n",
-      "module 'handlers' has no attribute 'speakers'\n",
+      "module 'handlers' has no attribute 'location'\n",
       "module 'handlers' has no attribute 'price'\n",
       "module 'handlers' has no attribute 'themes'\n",
       "module 'handlers' has no attribute 'description'\n",
-      "module 'handlers' has no attribute 'location'\n",
+      "module 'handlers' has no attribute 'speakers'\n",
       "module 'handlers' has no attribute 'organizers'\n",
       "module 'handlers' has no attribute 'speakers_companies'\n",
-      "module 'handlers' has no attribute 'speakers'\n",
+      "module 'handlers' has no attribute 'location'\n",
       "module 'handlers' has no attribute 'price'\n",
       "module 'handlers' has no attribute 'themes'\n",
       "module 'handlers' has no attribute 'description'\n",
-      "module 'handlers' has no attribute 'location'\n",
+      "module 'handlers' has no attribute 'speakers'\n",
       "module 'handlers' has no attribute 'organizers'\n",
       "module 'handlers' has no attribute 'speakers_companies'\n",
-      "module 'handlers' has no attribute 'speakers'\n",
+      "module 'handlers' has no attribute 'location'\n",
       "module 'handlers' has no attribute 'price'\n",
       "module 'handlers' has no attribute 'themes'\n",
       "module 'handlers' has no attribute 'description'\n",
-      "module 'handlers' has no attribute 'location'\n",
+      "module 'handlers' has no attribute 'speakers'\n",
       "module 'handlers' has no attribute 'organizers'\n",
       "module 'handlers' has no attribute 'speakers_companies'\n",
-      "module 'handlers' has no attribute 'speakers'\n",
+      "module 'handlers' has no attribute 'location'\n",
       "module 'handlers' has no attribute 'price'\n",
       "module 'handlers' has no attribute 'themes'\n",
       "module 'handlers' has no attribute 'description'\n",
-      "module 'handlers' has no attribute 'location'\n",
+      "module 'handlers' has no attribute 'speakers'\n",
       "module 'handlers' has no attribute 'organizers'\n",
       "module 'handlers' has no attribute 'speakers_companies'\n",
-      "module 'handlers' has no attribute 'speakers'\n",
+      "module 'handlers' has no attribute 'location'\n",
       "module 'handlers' has no attribute 'price'\n",
       "module 'handlers' has no attribute 'themes'\n",
       "module 'handlers' has no attribute 'description'\n",
-      "module 'handlers' has no attribute 'location'\n",
+      "module 'handlers' has no attribute 'speakers'\n",
       "module 'handlers' has no attribute 'organizers'\n",
       "module 'handlers' has no attribute 'speakers_companies'\n",
-      "module 'handlers' has no attribute 'speakers'\n",
+      "module 'handlers' has no attribute 'location'\n",
       "module 'handlers' has no attribute 'price'\n",
       "module 'handlers' has no attribute 'themes'\n",
       "module 'handlers' has no attribute 'description'\n",
-      "module 'handlers' has no attribute 'location'\n",
+      "module 'handlers' has no attribute 'speakers'\n",
       "module 'handlers' has no attribute 'organizers'\n",
       "module 'handlers' has no attribute 'speakers_companies'\n",
+      "module 'handlers' has no attribute 'location'\n",
+      "module 'handlers' has no attribute 'price'\n",
+      "module 'handlers' has no attribute 'themes'\n",
+      "module 'handlers' has no attribute 'description'\n",
       "module 'handlers' has no attribute 'speakers'\n",
-      "module 'handlers' has no attribute 'price'\n"
+      "module 'handlers' has no attribute 'organizers'\n"
      ]
     }
    ],
@@ -94,6 +96,7 @@
     "import files\n",
     "import soups\n",
     "import urls\n",
+    "import langs\n",
     "import handlers\n",
     "\n",
     "# Узнаем, какие из стартовых страниц, перечисленных в files.pages, размечены.\n",
@@ -210,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,11 +243,14 @@
     "\n",
     "    h2 = add_tag('h2', section, data.title)\n",
     "    p = add_tag('p', section)\n",
-    "    t = add_tag('time', p, f'{data.date} {data.time}')\n",
+    "    datetime_str = langs.make_datetime_string(data.date, data.time)\n",
+    "    t = add_tag('time', p, datetime_str)\n",
     "    p.append(NavigableString(\", \"))\n",
     "    add_tag('a', p, text='ссылка на мероприятие', attrs={'href': event_url})\n",
     "    \n",
     "    if data.reg_url:\n",
+    "        if data.reg_url[0] == '#':  #! в случае если ссылка на регистрацию - якорная (нужен обработчик)\n",
+    "            data.reg_url = event_url + data.reg_url\n",
     "        p.append(NavigableString(\", \"))\n",
     "        add_tag('a', p, text='ссылка для регистрации', attrs={'href': data.reg_url})\n",
     "\n",
@@ -267,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -277,13 +283,13 @@
       "Writing ../../matyushkin.github.io/404/index.html from ./404.html.\n",
       "Writing ../../matyushkin.github.io/index.html from ./index.html.\n",
       "Writing ../../matyushkin.github.io/README/index.html from ./README.md.\n",
+      "Writing ../../matyushkin.github.io/donate/index.html from ./donate/index.html.\n",
       "Writing ../../matyushkin.github.io/cv/index.html from ./cv/index.html.\n",
       "Writing ../../matyushkin.github.io/links/index.html from ./links/index.html.\n",
-      "Writing ../../matyushkin.github.io/events/index.html from ./events/index.html.\n",
-      "Writing ../../matyushkin.github.io/donate/index.html from ./donate/index.html.\n",
       "Writing ../../matyushkin.github.io/posts/index.html from ./posts/index.html.\n",
       "Writing ../../matyushkin.github.io/spb/index.html from ./spb/index.html.\n",
       "Writing ../../matyushkin.github.io/texts/index.html from ./texts/index.html.\n",
+      "Writing ../../matyushkin.github.io/events/index.html from ./events/index.html.\n",
       "Copied 15 files / Wrote 10 files in 0.18 seconds (18.0ms each, v0.11.0)\n"
      ]
     },
@@ -293,7 +299,7 @@
        "True"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,28 +318,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master da16713] Events project files are updated\n",
-      " 1 file changed, 1 insertion(+), 1 deletion(-)\n",
+      "[master 82310eb] Events page is updated: more comfortable name of dayes\n",
+      " 1 file changed, 10 insertions(+), 10 deletions(-)\n",
+      " rewrite events/index.html (86%)\n",
       "Counting objects: 4, done.\n",
       "Delta compression using up to 8 threads.\n",
       "Compressing objects: 100% (3/3), done.\n",
-      "Writing objects: 100% (4/4), 420 bytes | 420.00 KiB/s, done.\n",
+      "Writing objects: 100% (4/4), 1.47 KiB | 752.00 KiB/s, done.\n",
       "Total 4 (delta 2), reused 0 (delta 0)\n",
       "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
       "To github.com:matyushkin/matyushkin.github.io.git\n",
-      "   24a3bc0..da16713  master -> master\n"
+      "   34599ef..82310eb  master -> master\n"
      ]
     }
    ],
    "source": [
-    "! cd ../matyushkin.github.io/; git add . ; git commit -m \"Events project files are updated\"; git push origin master"
+    "! cd ../matyushkin.github.io/; git add . ; git commit -m \"Events page is updated: more comfortable name of days\"; git push origin master"
    ]
   },
   {
