TODO из файла преобразован в Kanban-доску на GitHub

--- a/parser.ipynb
+++ b/parser.ipynb
@@ -2,90 +2,69 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false",
+    "toc-hr-collapsed": true,
+    "toc-nb-collapsed": true
+   },
    "source": [
-    "# 🕺 Стратегия\n",
-    "Сначала проверяются главные («стартовые») страницы, описанные в файле `pages.json`. Далее найденные на них ссылки на внутренние страницы мероприятий. Результаты записываются в файл `events.json`, который далее используется для генерации карточек мероприятий.\n",
-    "\n",
-    "# TODO:\n",
-    "- В структуру хэндлеров более логично передавать текущую структуру данных, а не объект, имя - так больше информации для анализа\n",
-    "- Добавить другую хорошо оформленную стартовую страницу\n",
-    "- Сделать очеловеченный вариант функции представления даты\n",
-    "- Добавить обработку тегов\n",
-    "- Вместо set правильный отбор тем\n",
-    "- Функцию add_tag логично превратить в стандартный метод класса EventCard\n",
-    "- Записывать дату в качестве свойства обновления, если строка не равна дате, то забирать информацию заново\n",
-    "- Добавлять utm-метки или аналоги (как Yandex-дзен), которые будут отображаться в метриках сайтов-приемников\n",
-    "- Добавить блок кнопок для возможности поделиться по аналогии с Яндекс\n",
-    "- Для хорошего метаописания имеет смысл сделать Counter по общему содержанию страниц с лемматизацией результата. \n",
-    "- For hand-written content: update of events may overwrite content\n",
-    "- Load `pages.json` - information about start wepbages: `name`, `url`, `func`\n",
-    "- Load `events.json` - information about current events:\n",
-    "- Check that events on the main pages are displayed in `events.json`\n",
-    "- If the event is not in the file, we need to add basic information about it on the second stage\n",
-    "- Past events are transfered to `past_events.json`\n",
-    "- On the next stage if any information is missing, we need to supplement it by going to specific url and parse the page\n",
-    "- Докладчик, который отвечает за вводный доклад (\"вступительное слово\" и т.п.) -- куратор"
+    "# 🐅 Парсер\n",
+    "Сначала проверяются главные («стартовые») страницы, описанные в файле `pages.json`. Далее найденные на них ссылки на внутренние страницы мероприятий. Результаты записываются в файл `events.json`, который далее используется для генерации карточек мероприятий в HTML. Результаты публикуются на [matyushkin.github.io/events](https://matyushkin.github.io/events/)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "module 'handlers' has no attribute 'speakers_companies'\n",
-      "module 'handlers' has no attribute 'location'\n",
-      "module 'handlers' has no attribute 'price'\n",
-      "module 'handlers' has no attribute 'themes'\n",
       "module 'handlers' has no attribute 'description'\n",
-      "module 'handlers' has no attribute 'speakers'\n",
+      "module 'handlers' has no attribute 'themes'\n",
       "module 'handlers' has no attribute 'organizers'\n",
-      "module 'handlers' has no attribute 'speakers_companies'\n",
       "module 'handlers' has no attribute 'location'\n",
       "module 'handlers' has no attribute 'price'\n",
-      "module 'handlers' has no attribute 'themes'\n",
-      "module 'handlers' has no attribute 'description'\n",
+      "module 'handlers' has no attribute 'speakers_companies'\n",
       "module 'handlers' has no attribute 'speakers'\n",
+      "module 'handlers' has no attribute 'description'\n",
+      "module 'handlers' has no attribute 'themes'\n",
       "module 'handlers' has no attribute 'organizers'\n",
-      "module 'handlers' has no attribute 'speakers_companies'\n",
       "module 'handlers' has no attribute 'location'\n",
       "module 'handlers' has no attribute 'price'\n",
-      "module 'handlers' has no attribute 'themes'\n",
-      "module 'handlers' has no attribute 'description'\n",
+      "module 'handlers' has no attribute 'speakers_companies'\n",
       "module 'handlers' has no attribute 'speakers'\n",
+      "module 'handlers' has no attribute 'description'\n",
+      "module 'handlers' has no attribute 'themes'\n",
       "module 'handlers' has no attribute 'organizers'\n",
-      "module 'handlers' has no attribute 'speakers_companies'\n",
       "module 'handlers' has no attribute 'location'\n",
       "module 'handlers' has no attribute 'price'\n",
-      "module 'handlers' has no attribute 'themes'\n",
-      "module 'handlers' has no attribute 'description'\n",
+      "module 'handlers' has no attribute 'speakers_companies'\n",
       "module 'handlers' has no attribute 'speakers'\n",
+      "module 'handlers' has no attribute 'description'\n",
+      "module 'handlers' has no attribute 'themes'\n",
       "module 'handlers' has no attribute 'organizers'\n",
-      "module 'handlers' has no attribute 'speakers_companies'\n",
       "module 'handlers' has no attribute 'location'\n",
       "module 'handlers' has no attribute 'price'\n",
-      "module 'handlers' has no attribute 'themes'\n",
-      "module 'handlers' has no attribute 'description'\n",
+      "module 'handlers' has no attribute 'speakers_companies'\n",
       "module 'handlers' has no attribute 'speakers'\n",
+      "module 'handlers' has no attribute 'description'\n",
+      "module 'handlers' has no attribute 'themes'\n",
       "module 'handlers' has no attribute 'organizers'\n",
-      "module 'handlers' has no attribute 'speakers_companies'\n",
       "module 'handlers' has no attribute 'location'\n",
       "module 'handlers' has no attribute 'price'\n",
-      "module 'handlers' has no attribute 'themes'\n",
-      "module 'handlers' has no attribute 'description'\n",
+      "module 'handlers' has no attribute 'speakers_companies'\n",
       "module 'handlers' has no attribute 'speakers'\n",
+      "module 'handlers' has no attribute 'description'\n",
+      "module 'handlers' has no attribute 'themes'\n",
       "module 'handlers' has no attribute 'organizers'\n",
-      "module 'handlers' has no attribute 'speakers_companies'\n",
       "module 'handlers' has no attribute 'location'\n",
       "module 'handlers' has no attribute 'price'\n",
-      "module 'handlers' has no attribute 'themes'\n",
-      "module 'handlers' has no attribute 'description'\n",
-      "module 'handlers' has no attribute 'speakers'\n",
-      "module 'handlers' has no attribute 'organizers'\n"
+      "module 'handlers' has no attribute 'speakers_companies'\n",
+      "module 'handlers' has no attribute 'speakers'\n"
      ]
     }
    ],
@@ -170,7 +149,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "with open('files/events.json', 'w', encoding='utf-8') as events_file:\n",
@@ -180,7 +161,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "#! Отсюда можно забрать обработчикитегов\n",
@@ -206,15 +189,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "source": [
     "# Собираем HTML-страницу и деплоим проект 💃"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "from bs4 import BeautifulSoup, NavigableString\n",
@@ -273,8 +260,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -283,14 +272,14 @@
       "Writing ../../matyushkin.github.io/404/index.html from ./404.html.\n",
       "Writing ../../matyushkin.github.io/index.html from ./index.html.\n",
       "Writing ../../matyushkin.github.io/README/index.html from ./README.md.\n",
-      "Writing ../../matyushkin.github.io/donate/index.html from ./donate/index.html.\n",
       "Writing ../../matyushkin.github.io/cv/index.html from ./cv/index.html.\n",
-      "Writing ../../matyushkin.github.io/links/index.html from ./links/index.html.\n",
-      "Writing ../../matyushkin.github.io/posts/index.html from ./posts/index.html.\n",
-      "Writing ../../matyushkin.github.io/spb/index.html from ./spb/index.html.\n",
-      "Writing ../../matyushkin.github.io/texts/index.html from ./texts/index.html.\n",
+      "Writing ../../matyushkin.github.io/donate/index.html from ./donate/index.html.\n",
       "Writing ../../matyushkin.github.io/events/index.html from ./events/index.html.\n",
-      "Copied 15 files / Wrote 10 files in 0.18 seconds (18.0ms each, v0.11.0)\n"
+      "Writing ../../matyushkin.github.io/links/index.html from ./links/index.html.\n",
+      "Writing ../../matyushkin.github.io/texts/index.html from ./texts/index.html.\n",
+      "Writing ../../matyushkin.github.io/spb/index.html from ./spb/index.html.\n",
+      "Writing ../../matyushkin.github.io/posts/index.html from ./posts/index.html.\n",
+      "Copied 15 files / Wrote 10 files in 0.19 seconds (19.0ms each, v0.11.0)\n"
      ]
     },
     {
@@ -299,7 +288,7 @@
        "True"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,37 +307,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 82310eb] Events page is updated: more comfortable name of dayes\n",
+      "[master b9839b6] Events page is updated: only actual events\n",
       " 1 file changed, 10 insertions(+), 10 deletions(-)\n",
-      " rewrite events/index.html (86%)\n",
+      " rewrite events/index.html (83%)\n",
       "Counting objects: 4, done.\n",
       "Delta compression using up to 8 threads.\n",
       "Compressing objects: 100% (3/3), done.\n",
-      "Writing objects: 100% (4/4), 1.47 KiB | 752.00 KiB/s, done.\n",
+      "Writing objects: 100% (4/4), 489 bytes | 489.00 KiB/s, done.\n",
       "Total 4 (delta 2), reused 0 (delta 0)\n",
       "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
       "To github.com:matyushkin/matyushkin.github.io.git\n",
-      "   34599ef..82310eb  master -> master\n"
+      "   82310eb..b9839b6  master -> master\n"
      ]
     }
    ],
    "source": [
-    "! cd ../matyushkin.github.io/; git add . ; git commit -m \"Events page is updated: more comfortable name of days\"; git push origin master"
+    "! cd ../matyushkin.github.io/; git add . ; git commit -m \"Events page is updated: only actual events\"; git push origin master"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
